--- a/docs/assets/css/scss/components/_header.scss
+++ b/docs/assets/css/scss/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  height: 100vh;
+  height: 90vh;
   display: flex;
   justify-content: space-between;
   overflow-x: hidden;
@@ -7,6 +7,10 @@
   &__left {
     height: 100%;
     width: 50%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
   }
 
   &__right {
@@ -21,11 +25,13 @@
       position: absolute;
       right: 0;
       top: 0;
+      height: 80%;
       z-index: -1;
       margin: 0;
     }
 
     .pixel3 {
+      height: 75%;
     }
   }
 }
