Onepage color update

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -10,36 +10,42 @@ h1 {
   font-family: "Montserrat Alternates", "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 41px;
+  color: #ED1E79;
 }
 
 h2 {
   font-family: "Montserrat Alternates", "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 38px;
+  color: #ED1E79;
 }
 
 h3 {
   font-family: "Montserrat Alternates", "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 33px;
+  color: #ED1E79;
 }
 
 h4 {
   font-family: "Montserrat Alternates", "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 26px;
+  color: #ED1E79;
 }
 
 h5 {
   font-family: "Montserrat Alternates", "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 17px;
+  color: #ED1E79;
 }
 
 h6 {
   font-family: "Montserrat Alternates", "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 6px;
+  color: #ED1E79;
 }
 
 p {
