--- a/docs/assets/css/scss/base/_base.scss
+++ b/docs/assets/css/scss/base/_base.scss
@@ -3,6 +3,7 @@
     font-family: $header-font-family;
     font-weight: $header-font-weight;
     font-size: $header-font-size - ($i * $i );
+    color: #ED1E79;
   }
 }
 
